[project]
name = "midi-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio==5.3.0",
    "lightning==2.4.0",
    "numpy>=2.1.3",
    "peft>=0.13.0",
    "pillow>=10.4.0",
    "pyfluidsynth>=1.3.4",
    "safetensors>=0.4.5",
    "torch>=2.5.1",
    "tqdm>=4.67.0",
    "transformers>=4.36",
]
